<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.cube</groupId>
	<artifactId>md-jaxrs-ingress-interceptor</artifactId>
	<version>1.2.2</version>
	<packaging>jar</packaging>

	<name>jaxrs-ingress-interceptor</name>
	<description>JAX-RS Ingress Interceptors for HTTP Requests</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>8</java.version>
		<version.md.agent>1.0.29</version.md.agent>
	</properties>

	<distributionManagement>
    		<repository>
      			<id>github</id>
      			<name>GitHub CubeIO Apache Maven Packages</name>
      			<url>https://maven.pkg.github.com/cube-io-corp/interceptor-framework</url>
    		</repository>
  	</distributionManagement>

	<repositories>
		<repository>
			<id>github</id>
			<name>GitHub OWNER Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/cube-io-corp/agent</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->

		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
			<groupId>io.cube</groupId>
			<artifactId>agent</artifactId>
			<version>${version.md.agent}</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
			<!--  needed for unit and integration testing  -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
			</plugin>
		</plugins>
	</build>


</project>
